# starlib

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUTHENTICATION.md  CHANGELOG.md  Cargo.toml  DESIGN.md  Makefile  README.md  alembic.ini  get_user_tokens.py  pyproject.toml  release-please-config.json  test_auth.py  zensical.toml
.agents/skills/debug-desktop-app/: SKILL.md
.agents/skills/styling/: SKILL.md
.github/: dependabot.yml
.github/agents/: MigrationAgent.agent.md
.github/instructions/: docstrings.instructions.md
.github/workflows/: docs.yml  precommit.yml  release-please.yml  release.yml  run.yml  tests.yml  weekly-playlist.yml
assets/: starlib-wordmark.xcf  starlib.xcf
backend/: README.md  __init__.py  config.py  main.py
backend/alembic/: __init__.py  env.py  script.py.mako
backend/alembic/versions/: 0001_initial.py  0002_wipe_tracks_for_recursive_folders.py  0003_soundcloud_track_bpm.py  0004_drop_algorithm_version.py  0005_analyser_tables.py  0006_analyser_shazam_scans.py  0007_shazam_preview_artwork.py  0008_analyser_track_overrides.py  0009_track_overrides_duration.py  0010_analyser_tracks.py  0011_shazam_scan_tier.py  0012_track_set_bpm_pitch.py
backend/api/: __init__.py  ai.py  analyser.py  app_settings.py  auth.py  beats.py  bpm.py  deps.py  folder_config.py  metadata.py  ollama.py  profile_groups.py  rekordbox.py  rulesets.py  setup.py  soundcloud.py  suggestions.py  system_playlists.py
backend/api/metadata/: __init__.py  _helpers.py  (+5 more)
backend/core/: __init__.py
backend/schemas/: __init__.py  ai.py  auth.py  beats.py  folder_config.py  metadata.py  ollama.py  profile_group.py  rekordbox.py  ruleset.py  settings.py  setup.py  suggestions.py  tree.py
desktop/: README.md  package-lock.json  package.json  sidecar.spec  sidecar_entry.py
desktop/scripts/: setup-dev-sidecar.sh
desktop/src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
desktop/src-tauri/benches/: bpm_accuracy.rs
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: README.md  icon.icns
desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
desktop/src-tauri/src/bpm/: decode.rs  local.rs  mod.rs  soundcloud.rs  tempo.rs  types.rs
desktop/src-tauri/tests/: bpm.rs
docs/: MIGRATION_STATUS.md  architecture.md  authentication.md  desktop.md  frontend.md  getting-started.md  index.md
docs/extensions/: vars.py
docs/guide/: command-palette.md  features.md  index.md  installation.md  ollama.md  setup.md
docs/phase0/: README.md  artist-manager.md  bpm-shifter.md  key-shifter.md  like-explorer.md  meta-editor.md  overview.md
docs/phase1/: README.md  meta-editor-extraction.md
docs/phase2/: README.md  meta-editor-api.md
docs/technical/: architecture.md  authentication.md  auto-mix.md  backend.md  desktop.md  frontend.md  getting-started.md  index.md
examples/: token_refresh_example.py
fixtures/bpm/: README.md  manifest.json  manifest_ci.json
frontend/: .prettierignore  .prettierrc.json  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/e2e/: analyser.spec.ts  apply-rules-busy.spec.ts  apply-rules-sc-toggle.spec.ts  audio-output-disconnect.spec.ts  auth.spec.ts  autoskip-unplayable.spec.ts  bpm-input.spec.ts  bpm-pitcher-sync.spec.ts  bpm-pitcher.spec.ts  bpm-scrub.spec.ts  command-palette-catalog.spec.ts  command-palette.spec.ts  crossfade-soundcloud-audio.spec.ts  crossfade-soundcloud.spec.ts  crossfade.spec.ts  drag-handle-hover.spec.ts  fetch-from-downloads.spec.ts  finalize-busy.spec.ts  fixtures.ts  home.spec.ts  hyperspace-loader.spec.ts  library-duration-column.spec.ts  library-format-column.spec.ts  library-playing-indicator.spec.ts  library-rekordbox-usb.spec.ts  library-rekordbox.spec.ts  library-tree-empty-folders.spec.ts  library-tree-filtered-counts.spec.ts  library-waveform.spec.ts  meta-editor-waveform.spec.ts  navigation.spec.ts  player-artwork.spec.ts  player-utility-bar-sc.spec.ts  player-zoom.spec.ts  profile-groups.spec.ts  queue-panel.spec.ts  ruleset-list-refresh.spec.ts  sc-bpm-edit.spec.ts  sc-bpm-row-leak.spec.ts  sc-date-columns.spec.ts  (+27 more)
scripts/: build-and-run.sh  build_bpm_fixture.py  check_bpm_accuracy.sh  export_openapi.py  generate_sample_tracks.py  migrate_starlib_meta.py
soundcloud_tools/: client.py  oauth.py  settings.py  weekly.py
soundcloud_tools/handler/: artist_ranking.py  folder.py  track.py
soundcloud_tools/models/: __init__.py  activities.py  comment.py  like.py  playlist.py  repost.py  stream.py  track.py  user.py  web_profiles.py
soundcloud_tools/predict/: style.py
soundcloud_tools/streamlit/: app.py  client.py  components.py  file_selection.py  token_store.py  utils.py
soundcloud_tools/utils/: __init__.py  string.py
starlib/: __init__.py  cli.py
starlib_audio/: Cargo.toml
starlib_audio/src/: chunk.rs  decode.rs  lib.rs  local.rs  segment.rs  soundcloud.rs  tempo.rs  types.rs
tests/: conftest.py  test_ai_api.py  test_analyser_bugfixes.py  test_analyser_pipeline.py  test_analyser_shazam_scan.py  test_analyser_tracks.py  test_analyser_unit.py  test_artist_ranking.py  test_autoedit.py  test_autoedit_api.py  test_bpm_api.py  test_bpm_soundcloud_api.py  test_cache_db_concurrency.py  test_cache_db_migrations.py  test_credentials.py  test_deps.py  test_filename_parser.py  test_folder_config.py  test_folder_tree_api.py  test_folder_tree_counts.py  test_health.py  test_list_format.py  test_ollama_api.py  test_ollama_integration.py  test_ollama_service.py  test_profile_group_service.py  test_profile_groups_api.py  test_proxy.py  test_rekordbox_analysis.py  test_rekordbox_usb.py  test_root_music_folder.py  test_rule_engine.py  test_ruleset_service.py  test_rulesets_api.py  test_settings_migration.py  test_settings_store.py  test_smoke.py  test_suggesters.py  test_suggestions_api.py  test_track_handler.py
tests/api/: test_auth_rate_limit.py  test_bpm_folder_validation.py  test_fetch_from_downloads.py  test_sc_auth_cache.py  test_soundcloud_playlist_delete.py  test_soundcloud_stream.py
(+296 files in other folders)
