[project]
name = "starlib"
version = "0.2.11"
description = "DJ library management app."
authors = [{name = "Fabian Stermann", email = "56961284+fstermann@users.noreply.github.com"}]
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
    "pydantic>=2.9.0",
    "pydantic-settings>=2.4.0",
    "httpx>=0.27.2",
    "starlette>=0.40.0",
    "devtools>=0.12.2",
    "fake-useragent>=1.5.1",
    "requests>=2.32.4",
    "mutagen>=1.47.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.22",
    "fastapi-pagination>=0.12.0",
    "watchdog>=4.0.0",
    "platformdirs>=4.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "pre-commit>=4.5.1",
    "pytest>=8.0.0",
    "zensical>=0.0.29",
    # pygments 2.20 added `filename` as a recognized HtmlFormatter option; pymdownx 10.21
    # passes filename=None when no code block title is given, which causes html.escape(None)
    # to fail and silently breaks all code block rendering. Pin until pymdownx is fixed.
    "pygments<2.20",
]
desktop = [
    # PyInstaller is used to package the FastAPI backend into a self-contained binary.
    # Run: pyinstaller desktop/sidecar.spec --distpath desktop/binaries
    "pyinstaller>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
starlib = "starlib.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["backend", "soundcloud_tools", "starlib"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
fixable = ["I"]
extend-select = [
    "I",   # isort imports
    "T",   # no print statements
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "C90", # mccabe code complexity
    "RUF", # Ruff-specific rules
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Query", "fastapi.Depends", "Query", "Depends"]

[tool.pytest.ini_options]
testpaths = ["tests"]
