[project]
name = "starlib"
version = "0.5.0"
description = "DJ library management app."
authors = [{name = "Fabian Stermann", email = "56961284+fstermann@users.noreply.github.com"}]
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "httpx>=0.27.2",
    "starlette>=1.1.0",
    "devtools>=0.12.2",
    "fake-useragent>=1.5.1",
    "requests>=2.34.2",
    "mutagen>=1.47.0",
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.47.0",
    "python-multipart>=0.0.29",
    "fastapi-pagination>=0.15.13",
    "watchdog>=4.0.0",
    "platformdirs>=4.9.6",
    "sqlmodel>=0.0.22",
    "alembic>=1.13",
    "anthropic>=0.104.1",
    "keyring>=25.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.14",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.25.0",
    "zensical>=0.0.43",
    # pygments 2.20 added `filename` as a recognized HtmlFormatter option; pymdownx 10.21
    # passes filename=None when no code block title is given, which causes html.escape(None)
    # to fail and silently breaks all code block rendering. Pin until pymdownx is fixed.
    "pygments<2.21",
]
desktop = [
    # PyInstaller is used to package the FastAPI backend into a self-contained binary.
    # Run: pyinstaller desktop/sidecar.spec --distpath desktop/binaries
    "pyinstaller>=6.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "soundcloud_tools"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
fixable = ["I"]
extend-select = [
    "I",   # isort imports
    "T",   # no print statements
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "C90", # mccabe code complexity
    "RUF", # Ruff-specific rules
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Query", "fastapi.Depends", "Query", "Depends"]

[tool.ruff.lint.per-file-ignores]
# CLI scripts intentionally print to stdout/stderr.
"scripts/*" = ["T201"]

# SQLModel attribute access (Track.col.is_not, Track.col.in_, etc.) is correct
# at runtime but mypy sees the column as the bare Python type because of how
# SQLModel declares Field(). Suppress the resulting noise in the cache layer
# only — application code still gets full mypy coverage.
[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["backend.core.services.cache_db", "backend.core.db.*"]
disable_error_code = ["attr-defined", "union-attr", "arg-type", "operator", "call-arg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: requires a running Ollama server"]
addopts = "-m 'not integration'"
