[project]
name = "starlib"
version = "0.5.0"
description = "DJ library management app."
authors = [{name = "Fabian Stermann", email = "56961284+fstermann@users.noreply.github.com"}]
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "httpx>=0.27.2",
    "starlette>=1.3.1",
    "devtools>=0.12.2",
    "fake-useragent>=1.5.1",
    "requests>=2.34.2",
    "mutagen>=1.48.1",
    "fastapi>=0.138.1",
    "uvicorn[standard]>=0.49.0",
    "python-multipart>=0.0.32",
    "fastapi-pagination>=0.15.15",
    "watchdog>=4.0.0",
    "platformdirs>=4.10.0",
    "sqlmodel>=0.0.39",
    "alembic>=1.18.5",
    "anthropic>=0.112.0",
    "keyring>=25.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "zensical>=0.0.46",
    # pygments 2.20 added `filename` as a recognized HtmlFormatter option; pymdownx 10.21
    # passes filename=None when no code block title is given, which causes html.escape(None)
    # to fail and silently breaks all code block rendering. Pin until pymdownx is fixed.
    "pygments<2.21",
]
desktop = [
    # PyInstaller is used to package the FastAPI backend into a self-contained binary.
    # Run: pyinstaller desktop/sidecar.spec --distpath desktop/binaries
    "pyinstaller>=6.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "soundcloud_tools"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
fixable = ["I"]
extend-select = [
    "I",   # isort imports
    "T",   # no print statements
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "C90", # mccabe code complexity
    "RUF", # Ruff-specific rules
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Query", "fastapi.Depends", "Query", "Depends"]

[tool.ruff.lint.per-file-ignores]
# CLI scripts intentionally print to stdout/stderr.
"scripts/*" = ["T201"]

# SQLModel attribute access (Track.col.is_not, Track.col.in_, etc.) is correct
# at runtime but mypy sees the column as the bare Python type because of how
# SQLModel declares Field(). Suppress the resulting noise in the cache layer
# only — application code still gets full mypy coverage.
[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["backend.core.services.cache_db", "backend.core.db.*"]
disable_error_code = ["attr-defined", "union-attr", "arg-type", "operator", "call-arg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: requires a running Ollama server"]
addopts = "-m 'not integration'"
