[package]
name = "starlib"
version = "0.1.0"
description = "Starlib desktop application"
authors = ["Fabian Stermann <fabian.stermann@gmail.com>"]
license = "MIT"
repository = "https://github.com/fstermann/starlib"
edition = "2021"

[lib]
name = "starlib_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
