[package]
name = "starlib"
version = "0.2.2"
description = "Starlib desktop application"
authors = ["Fabian Stermann <56961284+fstermann@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/fstermann/starlib"
edition = "2021"

[lib]
name = "starlib_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["time"] }
