[package]
name = "starlib"
version = "0.4.3"
description = "Starlib desktop application"
authors = ["Fabian Stermann <56961284+fstermann@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/fstermann/starlib"
edition = "2021"

[lib]
name = "starlib_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-process = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
log = "0.4"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1", features = ["time", "sync"] }
thiserror = "2"
symphonia = { version = "0.5", features = ["aac", "aiff", "alac", "isomp4", "mp3", "flac", "wav", "vorbis"] }
rustfft = "6"
anyhow = "1"
futures = "0.3"
url = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
